Add a few more elements

--- a/index.html
+++ b/index.html
@@ -30,9 +30,47 @@
 </header>
 
 <main>
-    <h1>Hello, World!</h1>
+    <h1>Hi!</h1>
 
-    <p>Accessible (WCAG), limited JS, vanilla PHP, SQLite, mostly classless CSS. Emphasis on native HTML elements, built-in validation, email-based auth. Link to an <a href="/about">About</a> page.</p>
+    <p>The <code>classless-semantic.css</code> framework is a minimal CSS stylesheet that styles native HTML elements with an emphasis on semantic structure and accessibility. Find the project on <a href="https://github.com/dandalpiaz/classless-semantic.css">GitHub</a>.</p>
+
+    <h2>Sample Elements</h2>
+
+    <h3>Details/Summary</h3>
+
+    <details>
+        <summary>Expandable section with <code>&lt;details&gt;</code> and <code>&lt;summary&gt;</code></summary>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi.</p>
+    </details>
+
+    <h3>Table</h3>
+
+    <table>
+        <caption>Example <code>&lt;table&gt;</code></caption>
+        <thead>
+            <tr>
+                <th>Element</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>TBD</td>
+                <td>TBD</td>
+            </tr>
+            <tr>
+                <td>TBD</td>
+                <td>TBD</td>
+            </tr>
+        </tbody>
+    </table>
+
+    <h3>Blockquote</h3>
+
+    <blockquote cite="https://www.huxley.net/bnw/four.html">Words can be like X-rays, if you use them properly—they’ll go through anything. You read and you’re pierced.
+    </blockquote>
+
+
 
     <h2>Todo</h2>
 
@@ -44,29 +82,14 @@
         <li>Images/figures</li>
         <li>Code blocks</li>
         <li>FAQs w/ details/summary</li>
-        <li>Validation messages, alerts</li>
+        <li>Validation messages, alerts
+            <ul>
+                <li>test 1</li>
+                <li>test 2</li>
+            </ul>
+        </li>
         <li>Grids</li>
     </ul>
-
-    <table>
-        <caption>Users in the Database</caption>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Email</th>
-                <th>Display Name</th>
-                <th>Created At</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>2</td>
-                <td>3</td>
-                <td>4</td>
-            </tr>
-        </tbody>
-    </table>
 
 </main>
 
