--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<a href="#main" id="skip-to-main">Skip to main content</a>
+
 <header>
     <a href="./index.html">👋 classless-semantic.css</a>
     <nav aria-label="Main Navigation">
@@ -29,7 +31,7 @@
     </details>
 </header>
 
-<main>
+<main id="main">
     <h1>Hi!</h1>
 
     <figure class="figure-right">
@@ -61,16 +63,19 @@
         <caption>Example <code>&lt;table&gt;</code></caption>
         <thead>
             <tr>
-                <th>Element</th>
-                <th>Status</th>
+                <th>Column 1</th>
+                <th>Column 2</th>
+                <th>Column 3</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>TBD</td>
                 <td>TBD</td>
+                <td>TBD</td>
             </tr>
             <tr>
+                <td>TBD</td>
                 <td>TBD</td>
                 <td>TBD</td>
             </tr>
@@ -88,33 +93,6 @@
     console.log("Hello, world!");
 }
 </code></pre>
-
-    <h2>Todo</h2>
-
-    <ul>
-        <li>Add skip-to main link</li>
-        <li>Sample pages - products, search, cart, payment</li>
-        <li>Get a list of all semantic HTML elements</li>
-        <li>Light mode</li>
-        <li>Hover states</li>
-        <li>Images/figures</li>
-        <li>Code blocks</li>
-        <li>Validation messages, alerts</li>
-        <li>Grids</li>
-        <li>Select options</li>
-        <li>Checkbox</li>
-        <li>Radio buttons</li>
-        <li>Switch</li>
-        <li>File upload</li>
-        <li>Range slider</li>
-        <li>Disabled inputs</li>
-        <li>Time, date, and color pickers</li>
-        <li>Modal</li>
-        <li>Article, section</li>
-        <li>Search</li>
-        <li>Progress bar and loading</li>
-        <li>Inline text elements</li>
-    </ul>
 
 </main>
 
