--- a/samples/contact.html
+++ b/samples/contact.html
@@ -10,6 +10,8 @@
 </head>
 <body>
 
+<a href="#main" id="skip-to-main">Skip to main content</a>
+
 <header>
     <a href="../index.html">👋 classless-semantic.css</a>
     <nav aria-label="Main Navigation">
