Testing some inputs

--- a/index.html
+++ b/index.html
@@ -111,6 +111,58 @@
     <button type="button">Sample Button</button>
     <button type="button" disabled>Disabled Button</button>
 
+    <h3>Inputs</h3>
+
+    <form>
+        <label for="sample-text">Sample Text Input:</label>
+        <input type="text" id="sample-text" placeholder="Enter text here" disabled>
+
+        <label for="sample-text">Sample Text Input:</label>
+        <input type="text" id="sample-text" placeholder="Enter text here">
+
+        <label for="sample-range">Sample Range Slider:</label>
+        <input type="range" id="sample-range" min="0" max="100" value="50">
+
+        <label for="sample-color">Sample Color Picker:</label>
+        <input type="color" id="sample-color" value="#1e8282">
+
+        <label for="sample-date">Sample Date Picker:</label>
+        <input type="date" id="sample-date">
+
+        <label for="sample-time">Sample Time Picker:</label>
+        <input type="time" id="sample-time">
+
+        <label for="sample-select">Sample Select Dropdown:</label>
+        <select id="sample-select">
+            <option value="" disabled selected>Select an option</option>
+            <option value="option1">Option 1</option>
+            <option value="option2">Option 2</option>
+            <option value="option3">Option 3</option>
+        </select>
+
+        <label for="sample-search">Sample Search Input:</label>
+        <input type="search" id="sample-search" placeholder="Search...">
+
+        <label for="sample-textarea">Sample Textarea:</label>
+        <textarea id="sample-textarea" placeholder="Enter multiple lines of text here"></textarea>
+
+        <label for="sample-checkbox">Sample Checkbox</label>
+        <input type="checkbox" id="sample-checkbox">
+
+        <fieldset>
+            <legend>Sample Radio Buttons</legend>
+
+            <label for="radio1">Option 1</label>
+            <input type="radio" id="radio1" name="sample-radio" value="option1">
+            
+            <label for="radio2">Option 2</label>
+            <input type="radio" id="radio2" name="sample-radio" value="option2">
+            
+            <label for="radio3">Option 3</label>
+            <input type="radio" id="radio3" name="sample-radio" value="option3">
+        </fieldset>
+    </form>
+
 </main>
 
 <footer>
