--- a/samples/contact.html
+++ b/samples/contact.html
@@ -49,7 +49,7 @@
 
             <label for="subject">Subject*</label>
             <select id="subject" aria-describedby="helper2" required>
-                <option value="" disabled selected>Select a subject</option>
+                <!--<option value="" disabled selected>Select a subject</option>-->
                 <option value="general">General Inquiry</option>
                 <option value="support">Support</option>
                 <option value="feedback">Feedback</option>
