--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>classless-semantic.css</title>
+    <title>classless-semantics.css</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a sample HTML page for demonstration purposes.">
+    <meta name="description" content="">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
-    <link rel="stylesheet" type="text/css" href="classless-semantic.css">
+    <link rel="stylesheet" type="text/css" href="classless-semantics.css">
 </head>
 <body>
 
 <a href="#main" id="skip-to-main">Skip to main content</a>
 
 <header>
-    <a href="./index.html">👋 classless-semantic.css</a>
+    <a href="./index.html">👋 classless-semantics.css</a>
     <nav aria-label="Main Navigation">
         <ul>
             <li><a href="./samples/contact.html">Contact</a></li>
@@ -32,6 +32,9 @@
 </header>
 
 <main id="main">
+
+    <div role="alert" class="red-alert">Under development</div>
+
     <h1>Hi!</h1>
 
     <figure class="figure-right">
@@ -39,7 +42,7 @@
         <figcaption>An example image with caption</figcaption>
     </figure>
 
-    <p>The <code>classless-semantic.css</code> framework is a minimal CSS stylesheet that styles native HTML elements with an emphasis on semantic structure and accessibility. Find the project on <a href="https://github.com/dandalpiaz/classless-semantic.css">GitHub</a>.</p>
+    <p>The <code>classless-semantics.css</code> framework is a minimal CSS stylesheet that styles native HTML elements with an emphasis on semantic structure and accessibility. Find the project on <a href="https://github.com/dandalpiaz/classless-semantics.css">GitHub</a>.</p>
 
     <ul>
         <li><strong>Test 1</strong> – this is a test.</li>
