--- a/samples/login.html
+++ b/samples/login.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>classless-semantic.css</title>
+    <title>classless-semantics.css</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a sample HTML page for demonstration purposes.">
+    <meta name="description" content="">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
-    <link rel="stylesheet" type="text/css" href="../classless-semantic.css">
+    <link rel="stylesheet" type="text/css" href="../classless-semantics.css">
 </head>
 <body>
 
 <a href="#main" id="skip-to-main">Skip to main content</a>
 
 <header>
-    <a href="../index.html">👋 classless-semantic.css</a>
+    <a href="../index.html">👋 classless-semantics.css</a>
     <nav aria-label="Main Navigation">
         <ul>
             <li><a href="contact.html">Contact</a></li>
@@ -33,7 +33,7 @@
 
 <main id="main" class="centered-page">
 
-    <div role="alert" class="yellow-alert">This page is a sample, forms do not function.</div>
+    <div role="alert" class="yellow-alert">This page is a sample, forms do not function</div>
 
     <h1>Log In</h1>
 
