--- a/samples/grid.html
+++ b/samples/grid.html
@@ -49,28 +49,40 @@
 
     <div class="grid" role="list">
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
         <div role="listitem">
-            <img src="https://picsum.photos/id/29/400/300" alt="Placeholder image 1" />
-            <span>Item 1</span>
+            <a href="https://example.com">
+                <img src="https://picsum.photos/id/29/400/225" alt="Placeholder image 1" />
+                <small>Item 1</small>
+            </a>
         </div>
     </div>
 
