--- a/samples/grid.html
+++ b/samples/grid.html
@@ -37,6 +37,21 @@
     </details>
 </header>
 
+<aside>
+    <details open>
+        <summary>Related Links</summary>
+        <nav aria-label="Related Links">
+            <ul>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="grid.html">Grid Example</a></li>
+                <li><a href="crud.html">CRUD Example</a></li>
+                <li><a href="contact.html">Contact Form</a></li>
+                <li><a href="login.html">Login Form</a></li>
+            </ul>
+        </nav>
+    </details>
+</aside>
+
 <main id="main">
 
     <div role="alert" class="yellow-alert">Sample page, forms do not function</div>
