--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <a href="#main" id="skip-to-main">Skip to main content</a>
 
-<header>
+<header class="container">
     <a href="./index.html">👋 classless-semantics.css</a>
     <nav aria-label="Main Navigation">
         <ul>
@@ -37,7 +37,7 @@
     </details>
 </header>
 
-<main id="main">
+<main id="main" class="container">
 
     <div role="alert" class="red-alert"><a href="https://github.com/dandalpiaz/classless-semantics.css/releases">v1.0.0-alpha</a> coming soon</div>
 
@@ -178,7 +178,7 @@
 
 </main>
 
-<footer>
+<footer class="container">
     <nav aria-label="Footer Navigation">
         <ul>
             <li><a href="">Terms</a></li>
