--- a/samples/news.html
+++ b/samples/news.html
@@ -12,7 +12,7 @@
 
 <a href="#main" id="skip-to-main">Skip to main content</a>
 
-<header>
+<header class="container">
     <a href="../index.html">👋 classless-semantics.css</a>
     <nav aria-label="Main Navigation">
         <ul>
@@ -37,17 +37,19 @@
     </details>
 </header>
 
-<main id="main">
+<main id="main" class="container">
 
     <div role="alert" class="yellow-alert">Sample page, forms do not function</div>
 
     <h1>News</h1>
 
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
 
 </main>
 
-<footer>
+<footer class="container">
     <nav aria-label="Footer Navigation">
         <ul>
             <li><a href="">Terms</a></li>
