Update aside details behavior

--- a/samples/grid.html
+++ b/samples/grid.html
@@ -37,7 +37,7 @@
     </details>
 </header>
 
-<aside>
+<aside class="right-sidebar">
     <details open>
         <summary>Related Links</summary>
         <nav aria-label="Related Links">
