--- a/samples/news.html
+++ b/samples/news.html
@@ -12,7 +12,7 @@
 
 <a href="#main" id="skip-to-main">Skip to main content</a>
 
-<header class="container">
+<header>
     <a href="../index.html">👋 classless-semantics.css</a>
     <nav aria-label="Main Navigation">
         <ul>
@@ -37,19 +37,75 @@
     </details>
 </header>
 
-<main id="main" class="container">
+<aside class="right-sidebar">
+    <details open>
+        <summary>Search, Sort, & Filter</summary>
 
-    <div role="alert" class="yellow-alert">Sample page, forms do not function</div>
+        <p>Use the options below to search, sort, or filter posts.</p>
+
+        <label for="sample-search">Search Posts:</label>
+        <input type="search" id="sample-search" placeholder="Search...">
+        
+        <label>Sort Posts By:</label>
+        <select>
+            <option>Hot</option>
+            <option>New</option>
+            <option>Top</option>
+            <option>Rising</option>
+        </select>
+
+        <label>Show Posts From:</label>
+        <select>
+            <option>Default</option>
+            <option>All time</option>
+            <option>Past 24 hours</option>
+            <option>Past week</option>
+            <option>Past month</option>
+            <option>Past year</option>
+        </select>
+    </details>
+</aside>
+
+<main id="main">
+
+    <!--<div role="alert" class="yellow-alert">Sample page, forms do not function</div>
 
     <h1>News</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>-->
+
+    <div style="margin-bottom: 15px; margin-top: 15px;">
+        <img style="float: left;" src="https://picsum.photos/id/1011/77/77" alt="Placeholder image example" />
+        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+            <a href="#" style="text-decoration: none;  font-weight: 400;">A Sample Post Title Goes Here and Also Here</a><br>
+            <small style="font-weight: 400;">9 hours ago by testuser to r/test</small><br>
+            <small>123 comments // ▲ 456 upvotes</small>
+        </div>
+    </div>
+
+    <div style="margin-bottom: 15px; background: rgb(15,15,15);">
+        <img style="float: left;" src="https://picsum.photos/id/1012/77/77" alt="Placeholder image example" />
+        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+            <a href="#" style="text-decoration: none;  font-weight: 400;">Another Sample Post Title Goes Here and Also Here</a><br>
+            <small style="font-weight: 400;">1 day ago by anotheruser to r/test</small><br>
+            <small>78 comments // ▲ 123 upvotes</small>
+        </div>
+    </div>
+
+    <div style="margin-bottom: 15px;">
+        <img style="float: left;" src="https://picsum.photos/id/1013/77/77" alt="Placeholder image example" />
+        <div style="vertical-align: top; margin-left: 90px; position: relative; bottom: 8px;">
+            <a href="#" style="text-decoration: none;  font-weight: 400;">Yet Another Sample Post Title Goes Here and Also Here</a><br>
+            <small style="font-weight: 400;">3 days ago by sampleuser to r/test</small><br>
+            <small>34 comments // ▲ 89 upvotes</small>
+        </div>
+    </div>
 
 </main>
 
-<footer class="container">
+<footer>
     <nav aria-label="Footer Navigation">
         <ul>
             <li><a href="">Terms</a></li>
