--- a/samples/posts.html
+++ b/samples/posts.html
@@ -73,13 +73,9 @@
 
 <main id="main">
 
-    <!--<div role="alert" class="yellow-alert">Sample page, forms do not function</div>
+    <div role="alert" class="yellow-alert">Sample page, forms do not function</div>
 
-    <h1>News</h1>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>
-
-    <p>Lorem ipsum dolor sit amet consectetur adipiscing elit. Quisque faucibus ex sapien vitae pellentesque sem placerat. In id cursus mi pretium tellus duis convallis. Tempus leo eu aenean sed diam urna tempor. Pulvinar vivamus fringilla lacus nec metus bibendum egestas. Iaculis massa nisl malesuada lacinia integer nunc posuere. Ut hendrerit semper vel class aptent taciti sociosqu. Ad litora torquent per conubia nostra inceptos himenaeos.</p>-->
+    <h1>News Aggregator</h1>
 
     <div style="margin-bottom: 15px; margin-top: 15px;">
         <img style="float: left;" src="https://picsum.photos/id/1011/77/77" alt="Placeholder image example" />
