Updates for rename, update menu, update favicon

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     <a href="./index.html"><img src="images/vanilla.png" id="example-site-icon" />vanilla-web-templates</a>
     <nav aria-label="Main Navigation">
         <ul>
-            <li><a href="">Get Started</a></li>
-            <li><a href="">Templates</a></li>
-            <li><a href="">GitHub</a></li>
+            <li><a href="#templates">Templates</a></li>
+            <li><a href="#usage">Usage</a></li>
+            <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
         </ul>
     </nav>
     <details>
         <summary> Menu </summary>
         <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="">Get Started</a></li>
-                <li><a href="">Templates</a></li>
-                <li><a href="">GitHub</a></li>
+                <li><a href="#templates">Templates</a></li>
+                <li><a href="#usage">Usage</a></li>
+                <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
             </ul>
         </nav>
     </details>
@@ -41,22 +41,29 @@
     <h1>Hi!</h1>
 
     <figure class="figure-right">
-        <img src="https://picsum.photos/id/28/700/500" alt="Placeholder image example" />
+        <img src="images/vanilla.png" alt="Placeholder image example" />
         <figcaption>An example image with caption</figcaption>
     </figure>
 
     <p>These <code>vanilla-web-templates</code> are a <strong>minimal</strong>, <strong>opinionated</strong> attempt to recreate common functionality needed in websites/apps using 'vanilla' CSS and JavaScript with an emphasis on <em>native HTML elements</em>, <em>semantic structure</em>, and <em>accessibility</em>.</p>
 
+    <h2 id="templates">Templates</h2>
+
     <ul>
-        <li><strong>TBD 1</strong> – [[[placeholder]]]</li>
-        <li><strong>TBD 2</strong> – [[[placeholder]]]</li>
-        <li><strong>TBD 3</strong> – [[[placeholder]]]</li>
-        <li><strong>TBD 4</strong> – [[[placeholder]]]</li>
+        <li><a href="./samples/article.html"><strong>Article / Blog Post</strong></a> – container-width</li>
+        <li><a href="./samples/contact.html"><strong>Contact Form</strong></a> – centered form</li>
+        <li><a href="./samples/login.html"><strong>Login Form</strong></a> – centered form</li>
+        <li><a href="./samples/crud.html"><strong>Modal-based Editing</strong></a> – full-width, left-sidebar, modal, table</li>
+        <li><a href="./samples/grid.html"><strong>Grid</strong></a> – full-width, right-sidebar, grid</li>
+        <li><a href="./samples/posts.html"><strong>Posts Aggregator</strong></a> – full-width, right-sidebar, listing</li>
     </ul>
 
-    <h2>Templates</h2>
+    <h2 id="usage">Usage</h2>
 
-    <form>
+    [[[TBD]]]
+    <pre><code>[[[CSS/JS includes here]]]</code></pre>
+
+    <!--<form>
         <label for="template-search">Filter Templates:</label>
         <input type="search" name="template-search" id="template-search" placeholder="Enter keyword to filter the items below..." aria-describedby="helper1" />
         <p id="helper1" class="helper-text">(results update as you type)</p>
@@ -125,9 +132,9 @@
         }
         searchInput.addEventListener('input', filterTemplates);
         filterTemplates();
-    </script>
+    </script>-->
 
-    <h2>Sample Elements</h2>
+    <!--<h2>Sample Elements</h2>
 
     <h3>Details/Summary</h3>
 
@@ -272,7 +279,7 @@
     123 Fake Street<br />
     Champaign, IL 61820<br />
     USA
-    </address>
+    </address>-->
 
 </main>
 
