--- a/samples/posts.html
+++ b/samples/posts.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
+    <link rel="icon" type="image/png" href="../images/favicon.png">
     <link rel="stylesheet" type="text/css" href="../vanilla-web-templates.css">
     <script src="../vanilla-web-templates.js" defer></script>
 </head>
@@ -17,18 +17,18 @@
     <a href="../index.html"><img src="../images/vanilla.png" id="example-site-icon" />vanilla-web-templates</a>
     <nav aria-label="Main Navigation">
         <ul>
-            <li><a href="">Get Started</a></li>
-            <li><a href="">Templates</a></li>
-            <li><a href="">GitHub</a></li>
+            <li><a href="../index.html#templates">Templates</a></li>
+            <li><a href="../index.html#usage">Usage</a></li>
+            <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
         </ul>
     </nav>
     <details>
         <summary> Menu </summary>
         <nav aria-label="Main Navigation">
             <ul>
-                <li><a href="">Get Started</a></li>
-                <li><a href="">Templates</a></li>
-                <li><a href="">GitHub</a></li>
+                <li><a href="../index.html#templates">Templates</a></li>
+                <li><a href="../index.html#usage">Usage</a></li>
+                <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
             </ul>
         </nav>
     </details>
@@ -69,7 +69,7 @@
 
     <div role="alert" class="yellow-alert">Sample page, forms do not function</div>
 
-    <h1>News Aggregator</h1>
+    <h1>Posts Aggregator</h1>
 
     <div style="margin-bottom: 15px; margin-top: 15px;">
         <img style="float: left;" src="https://picsum.photos/id/1011/77/77" alt="Placeholder image example" />
