Rename templates folder

--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
     <h2 id="templates">Templates</h2>
 
     <ul>
-        <li><a href="./samples/article.html"><strong>Article / Blog Post</strong></a> – container-width</li>
-        <li><a href="./samples/contact.html"><strong>Contact Form</strong></a> – centered form</li>
-        <li><a href="./samples/login.html"><strong>Login Form</strong></a> – centered form</li>
-        <li><a href="./samples/crud.html"><strong>Modal-based Editing</strong></a> – full-width, left-sidebar, modal, table</li>
-        <li><a href="./samples/grid.html"><strong>Grid</strong></a> – full-width, right-sidebar, grid</li>
-        <li><a href="./samples/posts.html"><strong>Posts Aggregator</strong></a> – full-width, right-sidebar, listing</li>
+        <li><a href="./templates/article.html"><strong>Article / Blog Post</strong></a> – container-width</li>
+        <li><a href="./templates/contact.html"><strong>Contact Form</strong></a> – centered form</li>
+        <li><a href="./templates/login.html"><strong>Login Form</strong></a> – centered form</li>
+        <li><a href="./templates/crud.html"><strong>Modal-based Editing</strong></a> – full-width, left-sidebar, modal, table</li>
+        <li><a href="./templates/grid.html"><strong>Grid</strong></a> – full-width, right-sidebar, grid</li>
+        <li><a href="./templates/posts.html"><strong>Posts Aggregator</strong></a> – full-width, right-sidebar, listing</li>
     </ul>
 
     <h2 id="usage">Usage</h2>
@@ -71,37 +71,37 @@
 
     <div class="grid" role="list">
         <div role="listitem">
-            <a href="./samples/article.html">
+            <a href="./templates/article.html">
                 <img src="https://picsum.photos/id/1/400/225" alt="Placeholder image 1" />
                 <small>Article / Blog Post</small>
             </a>
         </div>
         <div role="listitem">
-            <a href="./samples/contact.html">
+            <a href="./templates/contact.html">
                 <img src="https://picsum.photos/id/2/400/225" alt="Placeholder image 2" />
                 <small>Contact Form</small>
             </a>
         </div>
         <div role="listitem">
-            <a href="./samples/login.html">
+            <a href="./templates/login.html">
                 <img src="https://picsum.photos/id/3/400/225" alt="Placeholder image 3" />
                 <small>Login Form</small>
             </a>
         </div>
         <div role="listitem">
-            <a href="./samples/crud.html">
+            <a href="./templates/crud.html">
                 <img src="https://picsum.photos/id/4/400/225" alt="Placeholder image 4" />
                 <small>Modal-based Editing</small>
             </a>
         </div>
         <div role="listitem">
-            <a href="./samples/grid.html">
+            <a href="./templates/grid.html">
                 <img src="https://picsum.photos/id/5/400/225" alt="Placeholder image 5" />
                 <small>Grid</small>
             </a>
         </div>
         <div role="listitem">
-            <a href="./samples/posts.html">
+            <a href="./templates/posts.html">
                 <img src="https://picsum.photos/id/6/400/225" alt="Placeholder image 6" />
                 <small>News Aggregator</small>
             </a>
