--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" type="text/css" href="vanilla-web-templates.css">
-    <script src="vanilla-web-templates.js" defer></script>
+    <script src="vanilla-web-templates.js"></script>
 </head>
 <body>
 
@@ -20,6 +20,7 @@
             <li><a href="#templates">Templates</a></li>
             <li><a href="#usage">Usage</a></li>
             <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
+            <li><button id="light-toggle" onclick="toggleLight()" aria-label="toggle color mode">🌗</button></li>
         </ul>
     </nav>
     <details>
@@ -29,6 +30,7 @@
                 <li><a href="#templates">Templates</a></li>
                 <li><a href="#usage">Usage</a></li>
                 <li><a href="https://github.com/dandalpiaz/vanilla-web-templates">GitHub</a></li>
+                <li><button id="light-toggle" onclick="toggleLight()" aria-label="toggle color mode">🌗</button></li>
             </ul>
         </nav>
     </details>
